--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kaspel",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Klon303.github.io/klTest",
+  "homepage": "https://Klon303.github.io/klTest1",
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@types/node": "^24.3.0",
